<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilUserMail"
        app:errorEnabled="true"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_user_mail"
            android:id="@+id/edtUserMail"
            android:inputType="textEmailAddress"
            />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilUserName"
        app:errorEnabled="true"
        android:layout_below="@+id/tilUserMail"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/text_user_name"
            android:id="@+id/edtUserName"
            android:inputType="textEmailAddress"
            />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/text_login"
        />

</RelativeLayout>